# wrappers

./: .gitignore  CMakeLists.txt  README.md
game-wrapper/: CMakeLists.txt
game-wrapper/src/: configs.cpp  configs.h  game-optimizer-wrapper.cpp  game-optimizer-wrapper.h  game-wrapper.cpp  game-wrapper.h
game-wrapper/src/win/: dllmain.cpp  game-wrapper.def  version.rc
interop-export/src/: descriptor.cpp  descriptor.h  interop-export.cpp  interop-export.h
interop-export/src/win/: dllmain.cpp  interop-export.def
interop-inspector/: CMakeLists.txt
interop-inspector/src/: interop-inspector.cpp  interop-inspector.h
interop-inspector/src/win/: interop-inspector.def
